WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
290968
Cross-axis extent for a baseline-aligned flex item does not get calculated correctly when the baseline lies outside of the element
https://bugs.webkit.org/show_bug.cgi?id=290968
Summary
Cross-axis extent for a baseline-aligned flex item does not get calculated co...
Estevan Castilho
Reported
2025-04-02 18:49:26 PDT
This had been noticed back on a discussion under
https://github.com/WebKit/WebKit/pull/31376#discussion_r1782062028
, but never seems to have gotten fixed on WebKit. There is a corresponding WPT test, css/css-flexbox/baseline-outside-flex-item.html, which is not currently on the WebKit tree.
Attachments
Add attachment
proposed patch, testcase, etc.
EWS
Comment 1
2025-04-05 10:51:14 PDT
Committed
293305@main
(82dbbc0e5f2e): <
https://commits.webkit.org/293305@main
> Reviewed commits have been landed. Closing PR #43511 and removing active labels.
Radar WebKit Bug Importer
Comment 2
2025-04-05 10:57:30 PDT
<
rdar://problem/148663981
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug