Fix cross-axis extent calculation for alignment baselines lying outside of the flex item https://bugs.webkit.org/show_bug.cgi?id=290968

Reviewed by Alan Baradlay.

Initialize maxDescent to LayoutUnit::min() rather than 0, such that
the cross-axis extent for a baseline-aligned flex item still gets
calculated correctly even when the maximum descent results in a
negative value (say, because the baseline lies outside of the flex
item's boundaries).

This is a fix imported from Chromium[1], based on a comment[2] under
WebKit/WebKit#31376.

[1]: https://chromium-review.googlesource.com/c/chromium/src/+/5901280
[2]: https://github.com/WebKit/WebKit/pull/31376#discussion_r1782062028

* Source/WebCore/rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::layoutAndPlaceFlexItems):

Initialize maxDescent to LayoutUnit::min() rather than 0, as to
properly take negative descent values into account when calculating
the cross-axis extent for baseline-aligned items.

* LayoutTests/TestExpectations:
Remove expected failure for imported/w3c/web-platform-tests/css/css-flexbox/baseline-outside-flex-item.html

Canonical link: https://commits.webkit.org/293305@main